--- a/content/2019-06-13-bewhite.md
+++ b/content/2019-06-13-bewhite.md
@@ -28,13 +28,13 @@ backgroundPosition: 35%
 말그대로 화이트 워시라고<br><span class="jp">歯磨き粉のホワイトニングはどうするんだよ
 文字通りホワイトウォッシュだぞ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">32. ID: <span>jAZURaNy0.net</span> <span title="2019/06/13(木) 20:44:02.15">2019/06/13 20:44</span></div><div style="padding-top: 10px;"><p class="content">지나치게 신경씀<br><span class="jp">気にしすぎ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">37. ID: <span>40AjTQIJ0.net</span> <span title="2019/06/13(木) 20:44:39.06">2019/06/13 20:44</span></div><div style="padding-top: 10px;"><p class="content">대개 차별에 결부시키는 편이 머리가 이상하다<br><span class="jp">たいてい差別に結びつけるほうが頭おかしい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">46. ID: <span>8/aPyM6W0.net</span> <span title="2019/06/13(木) 20:46:16.17">2019/06/13 20:46</span></div><div style="padding-top: 10px;"><p class="content">블랙껌도 안되는거냐?
 바보같다<br><span class="jp">ブラックガムも駄目なのか
-アホくさ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">56. ID: <span>cywi3Yr60.net</span> <span title="2019/06/13(木) 20:47:30.78">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">백설탕과 흑설탕은 차별!<br><span class="jp">白砂糖と黒糖は差別！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">57. ID: <span>G2PXBe5t0.net</span> <span title="2019/06/13(木) 20:47:43.48">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">팥고수도 검고 팥고수도 샤베츠인가?ᄏ<br><span class="jp">あんこも黒あん白あんもシャベツなのか？w</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">58. ID: <span>U4ngDSYT0.net</span> <span title="2019/06/13(木) 20:47:56.45">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">구제할 수 없는 바보니깐
+アホくさ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">56. ID: <span>cywi3Yr60.net</span> <span title="2019/06/13(木) 20:47:30.78">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">백설탕과 흑설탕은 차별!<br><span class="jp">白砂糖と黒糖は差別！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">57. ID: <span>G2PXBe5t0.net</span> <span title="2019/06/13(木) 20:47:43.48">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">팥고수도 검고 팥고수도 샤베츠인가?ㅋ<br><span class="jp">あんこも黒あん白あんもシャベツなのか？w</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">58. ID: <span>U4ngDSYT0.net</span> <span title="2019/06/13(木) 20:47:56.45">2019/06/13 20:47</span></div><div style="padding-top: 10px;"><p class="content">구제할 수 없는 바보니깐
 하얗지 않은 세제 팔아서 생각해 봐<br><span class="jp">救いようのないアホだな
 白くない洗剤売って考えてみろよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">61. ID: <span>ZYbVKkcYO.net</span> <span title="2019/06/13(木) 20:48:20.46">2019/06/13 20:48</span></div><div style="padding-top: 10px;"><p class="content">( ́·ω·`)의식타이계는 이것이니까ㅋ<br><span class="jp">(´･ω･｀)意識他界系はこれだからw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">62. ID: <span>IXgadlus0.net</span> <span title="2019/06/13(木) 20:48:21.27">2019/06/13 20:48</span></div><div style="padding-top: 10px;"><p class="content">왠지 조만간 야구등에서 승패라는 말을 사용할 수 없게 될 것 같네.
 정말 귀찮다<br><span class="jp">なんかそのうち野球等で白星黒星って言葉が使えなくなりそうだな。
 本当に面倒くさい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">67. ID: <span>UXKFXVBx0.net</span> <span title="2019/06/13(木) 20:48:48.89">2019/06/13 20:48</span></div><div style="padding-top: 10px;"><p class="content">이 지나친 배려는 어디까지 계속되니?<br><span class="jp">この過剰な気遣いはどこまで続くんだ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">76. ID: <span>qR18RmKf0.net</span> <span title="2019/06/13(木) 20:51:11.79">2019/06/13 20:51</span></div><div style="padding-top: 10px;"><p class="content">그레이면 됐지?<br><span class="jp">グレーならよかったの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">78. ID: <span>t6LC1JUZ0.net</span> <span title="2019/06/13(木) 20:51:18.55">2019/06/13 20:51</span></div><div style="padding-top: 10px;"><p class="content">백색혜성제국도 망가져?<br><span class="jp">白色彗星帝国もダメになるの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">84. ID: <span>tT9bC9se0.net</span> <span title="2019/06/13(木) 20:52:34.66">2019/06/13 20:52</span></div><div style="padding-top: 10px;"><p class="content">오셀로는 괜찮은가?<br><span class="jp">オセロは大丈夫なのか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">91. ID: <span>oT2/dsM60.net</span> <span title="2019/06/13(木) 20:53:22.30">2019/06/13 20:53</span></div><div style="padding-top: 10px;"><p class="content">화이트삭스도 차별이었어?<br><span class="jp">ホワイトソックスも差別だったの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">94. ID: <span>yuNDmxKA0.net</span> <span title="2019/06/13(木) 20:53:57.60">2019/06/13 20:53</span></div><div style="padding-top: 10px;"><p class="content">화이트리스트든 화이트나이트든 차별적이네 그럼
 쿠다라네<br><span class="jp">じゃあホワイトリストもホワイトナイトも差別だな
-くっだらねー</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">96. ID: <span>U6HwMOyF0.net</span> <span title="2019/06/13(木) 20:54:14.03">2019/06/13 20:54</span></div><div style="padding-top: 10px;"><p class="content">불매당하여 당연한 키치가이 기업이었다.<br><span class="jp">不買されて当たり前のキチガイ企業だった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">99. ID: <span>vNy3NNBH0.net</span> <span title="2019/06/13(木) 20:54:51.15">2019/06/13 20:54</span></div><div style="padding-top: 10px;"><p class="content">"미백"도 사용할 수 없게 되겠지.<br><span class="jp">「美白」も使えなくなるんだろうな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">100. ID: <span>5fRPtKZe0.net</span> <span title="2019/06/13(木) 20:55:00.50">2019/06/13 20:55</span></div><div style="padding-top: 10px;"><p class="content">작금의 말사냥을 보니 위험해 보이는 것은 후딱후딱 해치우는 것도 있군<br><span class="jp">昨今の言葉狩りをみたら危なそうなものはさっさと仕舞うのもありだな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">106. ID: <span>Xr+RIzrw0.net</span> <span title="2019/06/13(木) 20:56:20.05">2019/06/13 20:56</span></div><div style="padding-top: 10px;"><p class="content">블랙 기업이라든가 구미권이라고 아웃이라고 자주 들었어<br><span class="jp">ブラック企業とか欧米圏だとアウトってよく言われてたな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">115. ID: <span>CStRB5jk0.net</span> <span title="2019/06/13(木) 20:59:20.17">2019/06/13 20:59</span></div><div style="padding-top: 10px;"><p class="content">세제는 공격이 좋다<br><span class="jp">洗剤はアタックがいい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">125. ID: <span>NoGnVT/A0.net</span> <span title="2019/06/13(木) 21:01:44.24">2019/06/13 21:01</span></div><div style="padding-top: 10px;"><p class="content">아아, 지겨워!<br><span class="jp">ああもうめんどくせえ！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">128. ID: <span>bTZQMe6+0.net</span> <span title="2019/06/13(木) 21:02:34.87">2019/06/13 21:02</span></div><div style="padding-top: 10px;"><p class="content">치약 어떻게 해.<br><span class="jp">歯磨き粉どうすんだよｗｗｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">132. ID: <span>nJqexAcY0.net</span> <span title="2019/06/13(木) 21:03:51.83">2019/06/13 21:03</span></div><div style="padding-top: 10px;"><p class="content">놀라운 거나 난 싫어<br><span class="jp">驚きの黒さとか俺は嫌だよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">133. ID: <span>0Cuw+SnX0.net</span> <span title="2019/06/13(木) 21:03:57.61">2019/06/13 21:03</span></div><div style="padding-top: 10px;"><p class="content">바보같은 해석이야. 망할라.<br><span class="jp">アホな解釈だなこりゃつぶれるわw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">146. ID: <span>O9Uyy3I/0.net</span> <span title="2019/06/13(木) 21:07:39.63">2019/06/13 21:07</span></div><div style="padding-top: 10px;"><p class="content">얼굴 새빨갛다 ᄏᄏᄏ ← 차별<br><span class="jp">顔真っ赤ｗｗｗ　←差別</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">148. ID: <span>G7ycFCWw0.net</span> <span title="2019/06/13(木) 21:07:56.73">2019/06/13 21:07</span></div><div style="padding-top: 10px;"><p class="content">코딱지같은 캐리어친구라던가, 나같이 경영학 지식을 써서
+くっだらねー</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">96. ID: <span>U6HwMOyF0.net</span> <span title="2019/06/13(木) 20:54:14.03">2019/06/13 20:54</span></div><div style="padding-top: 10px;"><p class="content">불매당하여 당연한 키치가이 기업이었다.<br><span class="jp">不買されて当たり前のキチガイ企業だった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">99. ID: <span>vNy3NNBH0.net</span> <span title="2019/06/13(木) 20:54:51.15">2019/06/13 20:54</span></div><div style="padding-top: 10px;"><p class="content">"미백"도 사용할 수 없게 되겠지.<br><span class="jp">「美白」も使えなくなるんだろうな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">100. ID: <span>5fRPtKZe0.net</span> <span title="2019/06/13(木) 20:55:00.50">2019/06/13 20:55</span></div><div style="padding-top: 10px;"><p class="content">작금의 말사냥을 보니 위험해 보이는 것은 후딱후딱 해치우는 것도 있군<br><span class="jp">昨今の言葉狩りをみたら危なそうなものはさっさと仕舞うのもありだな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">106. ID: <span>Xr+RIzrw0.net</span> <span title="2019/06/13(木) 20:56:20.05">2019/06/13 20:56</span></div><div style="padding-top: 10px;"><p class="content">블랙 기업이라든가 구미권이라고 아웃이라고 자주 들었어<br><span class="jp">ブラック企業とか欧米圏だとアウトってよく言われてたな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">115. ID: <span>CStRB5jk0.net</span> <span title="2019/06/13(木) 20:59:20.17">2019/06/13 20:59</span></div><div style="padding-top: 10px;"><p class="content">세제는 공격이 좋다<br><span class="jp">洗剤はアタックがいい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">125. ID: <span>NoGnVT/A0.net</span> <span title="2019/06/13(木) 21:01:44.24">2019/06/13 21:01</span></div><div style="padding-top: 10px;"><p class="content">아아, 지겨워!<br><span class="jp">ああもうめんどくせえ！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">128. ID: <span>bTZQMe6+0.net</span> <span title="2019/06/13(木) 21:02:34.87">2019/06/13 21:02</span></div><div style="padding-top: 10px;"><p class="content">치약 어떻게 해.<br><span class="jp">歯磨き粉どうすんだよｗｗｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">132. ID: <span>nJqexAcY0.net</span> <span title="2019/06/13(木) 21:03:51.83">2019/06/13 21:03</span></div><div style="padding-top: 10px;"><p class="content">놀라운 거나 난 싫어<br><span class="jp">驚きの黒さとか俺は嫌だよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">133. ID: <span>0Cuw+SnX0.net</span> <span title="2019/06/13(木) 21:03:57.61">2019/06/13 21:03</span></div><div style="padding-top: 10px;"><p class="content">바보같은 해석이야. 망할라.<br><span class="jp">アホな解釈だなこりゃつぶれるわw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">146. ID: <span>O9Uyy3I/0.net</span> <span title="2019/06/13(木) 21:07:39.63">2019/06/13 21:07</span></div><div style="padding-top: 10px;"><p class="content">얼굴 새빨갛다 ㅋㅋㅋ ← 차별<br><span class="jp">顔真っ赤ｗｗｗ　←差別</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">148. ID: <span>G7ycFCWw0.net</span> <span title="2019/06/13(木) 21:07:56.73">2019/06/13 21:07</span></div><div style="padding-top: 10px;"><p class="content">코딱지같은 캐리어친구라던가, 나같이 경영학 지식을 써서
 편의 '콩그룹' 같은 거 명명할 수도 없잖아.
 물론 발안도 무리일 테고.<br><span class="jp">鼻糞みたいなキャリア連中とか、俺みたいに経営学の知識使って
 便宜「コングロマリット」とか命名したりも出来ないだろ。
