--- a/content/2020-01-04-greta.md
+++ b/content/2020-01-04-greta.md
@@ -22,7 +22,7 @@ backgroundPosition: 40%
 【ストックホルム共同】地球温暖化防止を目指す世界的運動の象徴的存在となっているスウェーデンの環境活動家グレタ・トゥンベリさん（17）が3日、首都ストックホルムで共同通信の単独取材に応じ、温暖化対策の強化に向け「今年も権力を持つ人たちに圧力をかけ、人々に意識を広め続ける」と語った。招待されれば初訪日するとの意欲も示した。
 昨年9月の国連「気候行動サミット」で、各国指導者を強く批判する演説をして脚光を浴びた後、日本メディアの単独インタビューに応じたのは初めてとみられる。</span> </p></div><div class="content2"><div class="id">11. ID: <span>oc+d6Uie0.net</span> <span title="2020/01/04(土) 21:04:21.15">2020/01/04 21:04</span></div><div style="padding-top: 10px;"><p class="content">중국으로 가거라<br><span class="jp">中国に行けよ</span> </p></div></div><div class="content2"><div class="id">49. ID: <span>amqxfu2I0.net</span> <span title="2020/01/04(土) 21:05:41.10">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">올림픽 근처를 노리고 올 생각이잖아<br><span class="jp">オリンピック辺りを狙って来る気だろ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>DE7SDzIR0.net</span> <span title="2020/01/04(土) 21:03:52.53">2020/01/04 21:03</span></div><div style="padding-top: 10px;"><p class="content">오지 마라<br><span class="jp">来るな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>GX8uQbHS0.net</span> <span title="2020/01/04(土) 21:03:54.33">2020/01/04 21:03</span></div><div style="padding-top: 10px;"><p class="content">그만둬!<br><span class="jp">ヤメテ！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">8. ID: <span>q5rGH3Jf0.net</span> <span title="2020/01/04(土) 21:04:11.93">2020/01/04 21:04</span></div><div style="padding-top: 10px;"><p class="content">거·절·합·니·다<br><span class="jp">お・こ・と・わ・り</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">24. ID: <span>lozR8iJz0.net</span> <span title="2020/01/04(土) 21:04:50.67">2020/01/04 21:04</span></div><div style="padding-top: 10px;"><p class="content">교통수단은 뭘로 와?<br><span class="jp">交通手段はなんで来るん？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">34. ID: <span>TyabFOKN0.net</span> <span title="2020/01/04(土) 21:05:16.60">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">뭐하러 오는거야?<br><span class="jp">なにしにくるんだよｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">40. ID: <span>Rxto+jGy0.net</span> <span title="2020/01/04(土) 21:05:26.19">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">환경을 위해서 수영하고 와.<br><span class="jp">環境のために泳いでこい。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">41. ID: <span>F7NfCBqV0.net</span> <span title="2020/01/04(土) 21:05:26.92">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">일본의 파란 하늘을 보인 후 중국으로 데려가라.<br><span class="jp">日本の青空を見せた後中国に連れていけよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">52. ID: <span>1PJxpnjs0.net</span> <span title="2020/01/04(土) 21:05:45.10">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">진정해! 그레타!<br><span class="jp">落ち着け！グレタw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">53. ID: <span>r26mzS+A0.net</span> <span title="2020/01/04(土) 21:05:50.48">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">왜 이 꼬맹이 놀지?
 학교라든가 어떻게 지내고있는거야?<br><span class="jp">なんでこのガキ豪遊できんの？
-学校とかどうしてんの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">55. ID: <span>ECXusZXr0.net</span> <span title="2020/01/04(土) 21:05:52.72">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">근데 정말로 어떤 한 나라에는 아무말도 안하는구나 ᄏ<br><span class="jp">てかホントにある一国には何も言わないのなw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">62. ID: <span>Io61u5380.net</span> <span title="2020/01/04(土) 21:06:03.36">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">풍선으로 오너라<br><span class="jp">風船で来い</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">66. ID: <span>+YoVXMKc0.net</span> <span title="2020/01/04(土) 21:06:11.88">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">좋아. 다만 요트로 와.<br><span class="jp">いいぜ、ただしヨットで来いよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">70. ID: <span>vI24BiAp0.net</span> <span title="2020/01/04(土) 21:06:18">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">NHK가
+学校とかどうしてんの？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">55. ID: <span>ECXusZXr0.net</span> <span title="2020/01/04(土) 21:05:52.72">2020/01/04 21:05</span></div><div style="padding-top: 10px;"><p class="content">근데 정말로 어떤 한 나라에는 아무말도 안하는구나ㅋ<br><span class="jp">てかホントにある一国には何も言わないのなw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">62. ID: <span>Io61u5380.net</span> <span title="2020/01/04(土) 21:06:03.36">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">풍선으로 오너라<br><span class="jp">風船で来い</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">66. ID: <span>+YoVXMKc0.net</span> <span title="2020/01/04(土) 21:06:11.88">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">좋아. 다만 요트로 와.<br><span class="jp">いいぜ、ただしヨットで来いよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">70. ID: <span>vI24BiAp0.net</span> <span title="2020/01/04(土) 21:06:18">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">NHK가
 떠들어댈 뿐<br><span class="jp">ＮＨＫが
 大はしゃぎするだけ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">72. ID: <span>mxi/vN040.net</span> <span title="2020/01/04(土) 21:06:26">2020/01/04 21:06</span></div><div style="padding-top: 10px;"><p class="content">NHK가 밀착취재 사상<br><span class="jp">NHKが密着取材しそう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">89. ID: <span>0JNRpj1E0.net</span> <span title="2020/01/04(土) 21:07:02.84">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">그레타 "원자력 발전 최고.화력발전을 그만두라.<br><span class="jp">グレタ　「原発最高。火力発電をやめよ」</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">91. ID: <span>sAekmr7U0.net</span> <span title="2020/01/04(土) 21:07:11.23">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">비행기도 배도 화석연료 사용하긴 마찬가지야
 범선이라도 쓰고 올 셈인가<br><span class="jp">飛行機も船も化石燃料使うのは一緒だよなぁ
@@ -30,7 +30,7 @@ backgroundPosition: 40%
 시베리아 철도?<br><span class="jp">どういうルートで行き来するのかは興味ある
 シベリア鉄道？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">111. ID: <span>tW1tEz6+0.net</span> <span title="2020/01/04(土) 21:07:42.41">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">어차피 그레타의 맹아 일러스트가 다 그려져서, 금방이라도 돌아가게 된다.<br><span class="jp">どうせグレタの萌えイラストが描かれまくってすごすごと帰る羽目になる</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">113. ID: <span>LXcKcbHY0.net</span> <span title="2020/01/04(土) 21:07:43.93">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">이리로 봐!<br><span class="jp">こっち見んな！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">117. ID: <span>r9FhpX6R0.net</span> <span title="2020/01/04(土) 21:07:45.87">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">걸으면 정전되는 시시하나님 같아질 것 같아<br><span class="jp">歩くと停電するシシ神様みたくなりそう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">119. ID: <span>AUurlIaM0.net</span> <span title="2020/01/04(土) 21:07:49.51">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">어떻게 해서든 행선지를 중국으로 바꿀 수 없을까?<br><span class="jp">なんとかして行き先を中国に変えられないものか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">128. ID: <span>ccGZ7nEE0.net</span> <span title="2020/01/04(土) 21:07:58.93">2020/01/04 21:07</span></div><div style="padding-top: 10px;"><p class="content">저 쓰레기 같은 초밥집에 야마모토 타로와 둘이서 외출하는 정도의 이벤트는 갖고 싶다.<br><span class="jp">あのゴミみたいな寿司屋に山本太郎と二人で出かけるぐらいのイベントは欲しい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">133. ID: <span>r3CImE/n0.net</span> <span title="2020/01/04(土) 21:08:03.04">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">영화 최초의 거물급 왔다아아아<br><span class="jp">令和最初の大物きたあああああ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">135. ID: <span>Vnuyy7Qc0.net</span> <span title="2020/01/04(土) 21:08:08.79">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">오는 우중충하다
 특히 이놈의 기생충이 꼴사납게 터진다니까 참을 수 없어.<br><span class="jp">来んなうっとうしい
-特にこいつの寄生虫がウザさ爆発するんでたまらん</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">139. ID: <span>65BQytLV0.net</span> <span title="2020/01/04(土) 21:08:15.00">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">편서풍을 타고 기구로 강림해오면 여신<br><span class="jp">偏西風にのって気球で降臨してきたら女神</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">142. ID: <span>Gr7j49Jt0.net</span> <span title="2020/01/04(土) 21:08:18.42">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">바보 고이즈미(사진)가 영합하여 일본에 초빙하여, 뭔가 저지르는 오한.<br><span class="jp">バカの小泉が迎合して日本に招聘して、なんかやらかす悪寒</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">150. ID: <span>i4BKwavq0.net</span> <span title="2020/01/04(土) 21:08:30.48">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">섹시 코이즈미가 모실 거니까 위험해.<br><span class="jp">セクシー小泉がお迎えするから危ないよ。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">161. ID: <span>vDHjHSv50.net</span> <span title="2020/01/04(土) 21:08:45.82">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">어차피 누가 돈 좀 쌓아서 와달라고 하잖아
+特にこいつの寄生虫がウザさ爆発するんでたまらん</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">139. ID: <span>65BQytLV0.net</span> <span title="2020/01/04(土) 21:08:15.00">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">편서풍을 타고 기구로 강림해오면 여신<br><span class="jp">偏西風にのって気球で降臨してきたら女神</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">142. ID: <span>Gr7j49Jt0.net</span> <span title="2020/01/04(土) 21:08:18.42">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">바보 고이즈미가 영합하여 일본에 초빙하여, 뭔가 저지르는 오한.<br><span class="jp">バカの小泉が迎合して日本に招聘して、なんかやらかす悪寒</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">150. ID: <span>i4BKwavq0.net</span> <span title="2020/01/04(土) 21:08:30.48">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">섹시 코이즈미가 모실 거니까 위험해.<br><span class="jp">セクシー小泉がお迎えするから危ないよ。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">161. ID: <span>vDHjHSv50.net</span> <span title="2020/01/04(土) 21:08:45.82">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">어차피 누가 돈 좀 쌓아서 와달라고 하잖아
 바야흐로 비즈니스<br><span class="jp">どうせ誰かが金積んで来てもらうんだろ
 まさしくビジネス</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">163. ID: <span>dASx6Yte0.net</span> <span title="2020/01/04(土) 21:08:46.93">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">위험한 꼴을 당하면 끝장이다<br><span class="jp">やばい目をつけられたら終わりだ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">165. ID: <span>2WJ3Zwur0.net</span> <span title="2020/01/04(土) 21:08:49.29">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">오히려 원전 찬성파가 웰컴 사상<br><span class="jp">むしろ原発賛成派がウェルカムしそう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">176. ID: <span>9gT/0u480.net</span> <span title="2020/01/04(土) 21:08:56.57">2020/01/04 21:08</span></div><div style="padding-top: 10px;"><p class="content">방향성적으로 하토야마씨와 만나는것이 잘어울릴까<br><span class="jp">方向性的に鳩山氏と会うのがお似合いかな＾＾</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">185. ID: <span>xDsC4hhS0.net</span> <span title="2020/01/04(土) 21:09:13.89">2020/01/04 21:09</span></div><div style="padding-top: 10px;"><p class="content">전파소년과 협업해야 한다<br><span class="jp">電波少年とコラボするべき</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">195. ID: <span>zWI0/zAX0.net</span> <span title="2020/01/04(土) 21:09:36.12">2020/01/04 21:09</span></div><div style="padding-top: 10px;"><p class="content">되쫓아라<br><span class="jp">追い返せよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">210. ID: <span>C7huoyia0.net</span> <span title="2020/01/04(土) 21:09:55.89">2020/01/04 21:09</span></div><div style="padding-top: 10px;"><p class="content">우선은 아키하바라에 모셔라!<br><span class="jp">まずは秋葉原にお連れしろ！</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">214. ID: <span>959/ed1d0.net</span> <span title="2020/01/04(土) 21:10:02.05">2020/01/04 21:10</span></div><div style="padding-top: 10px;"><p class="content">뭐 하러 온다고?CO2무위로 배출하지 마<br><span class="jp">何しにくんの？CO2無駄に排出すんなよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">215. ID: <span>80AHppMy0.net</span> <span title="2020/01/04(土) 21:10:03.55">2020/01/04 21:10</span></div><div style="padding-top: 10px;"><p class="content">가장 많이 배출하는 나라로 가.
 중국에는 아무것도 말하지 않는 이 아이<br><span class="jp">一番排出している国に行けよ。
@@ -42,7 +42,7 @@ backgroundPosition: 40%
 ヨットでマゼラン海峡超え？
 それともシベリア鉄道？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">349. ID: <span>CxAhIz+W0.net</span> <span title="2020/01/04(土) 21:13:30.96">2020/01/04 21:13</span></div><div style="padding-top: 10px;"><p class="content">몇 개의 헬리콥터가 요트를 타고 공중에서 계속 따라오네요<br><span class="jp">ヨットでやってくる様を数社のヘリが空中から追い続けるんですね</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">355. ID: <span>+2dZBT3y0.net</span> <span title="2020/01/04(土) 21:13:41.40">2020/01/04 21:13</span></div><div style="padding-top: 10px;"><p class="content">핵잠수함에서 오는 건가<br><span class="jp">原潜でくるのかな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">357. ID: <span>q8lhiZxm0.net</span> <span title="2020/01/04(土) 21:13:45.52">2020/01/04 21:13</span></div><div style="padding-top: 10px;"><p class="content">일본에 와서 맛있는 라면 먹으면
 조금은 인생관이 변하지 않을까<br><span class="jp">日本に来て美味いラーメン食べれば
-少しは人生観変わるんじゃないか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">377. ID: <span>lWjN/TaU0.net</span> <span title="2020/01/04(土) 21:14:20.02">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">너 일본 관광하고 싶은 만큼 해.<br><span class="jp">おまえ日本観光したいだけやろｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">379. ID: <span>tDyd7N0X0.net</span> <span title="2020/01/04(土) 21:14:22.69">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">재미있을 것 같으니까 와 주었으면 한다<br><span class="jp">面白そうだから来て欲しい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">382. ID: <span>G1b7UOyr0.net</span> <span title="2020/01/04(土) 21:14:27.44">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">그 섬뜩한 연설을 듣고 싶어 ᄏ<br><span class="jp">あの不気味な演説が聞きたいｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">422. ID: <span>aOkBnlPh0.net</span> <span title="2020/01/04(土) 21:15:30.43">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">아키다 선물하고 친일파가 되게 하다<br><span class="jp">秋田犬プレゼントして親日派になってもらおう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">423. ID: <span>4iB+O8yR0.net</span> <span title="2020/01/04(土) 21:15:32.64">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">안예로 요시모토에 들어가고 싶은 것인가?<br><span class="jp">顔芸で吉本入りしたいのか?</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">427. ID: <span>fzF4sWBT0.net</span> <span title="2020/01/04(土) 21:15:36.38">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">이건, 일본에 뭔가 불평을 하고 가고 싶다고 말하는 거지?<br><span class="jp">これって、日本に何か文句言いに行きたいって言ってるんだよな？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">428. ID: <span>SzS+rt7I0.net</span> <span title="2020/01/04(土) 21:15:37.14">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">대꾸를 받지 못하는 상대를 골라서 끝까지 강세를 보이다<br><span class="jp">言い返されない相手を選んでとことん強気になる</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">442. ID: <span>tSNQccTQ0.net</span> <span title="2020/01/04(土) 21:15:48.79">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">이번엔 일본이 돈줄이라고 밟았나 여자<br><span class="jp">今度は日本が金づるになると踏んだのか、女</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">456. ID: <span>Y434NQsg0.net</span> <span title="2020/01/04(土) 21:16:13.35">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">우쭐대는 극치를 다해 환영해 주마<br><span class="jp">よし贅の極みを尽くして歓迎してやろう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">458. ID: <span>q0Hh6+AK0.net</span> <span title="2020/01/04(土) 21:16:16.18">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">이런 애기에도 꺄거리며 마중나올 머저리는 있을까<br><span class="jp">こんなガキでもキャーキャーいって出迎えるミーハーは居るんだろうか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">469. ID: <span>pcnvu3YB0.net</span> <span title="2020/01/04(土) 21:16:33.24">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">와라 기다리고 있을게
+少しは人生観変わるんじゃないか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">377. ID: <span>lWjN/TaU0.net</span> <span title="2020/01/04(土) 21:14:20.02">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">너 일본 관광하고 싶은 만큼 해.<br><span class="jp">おまえ日本観光したいだけやろｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">379. ID: <span>tDyd7N0X0.net</span> <span title="2020/01/04(土) 21:14:22.69">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">재미있을 것 같으니까 와 주었으면 한다<br><span class="jp">面白そうだから来て欲しい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">382. ID: <span>G1b7UOyr0.net</span> <span title="2020/01/04(土) 21:14:27.44">2020/01/04 21:14</span></div><div style="padding-top: 10px;"><p class="content">그 섬뜩한 연설을 듣고 싶어ㅋ<br><span class="jp">あの不気味な演説が聞きたいｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">422. ID: <span>aOkBnlPh0.net</span> <span title="2020/01/04(土) 21:15:30.43">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">아키다 선물하고 친일파가 되게 하다<br><span class="jp">秋田犬プレゼントして親日派になってもらおう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">423. ID: <span>4iB+O8yR0.net</span> <span title="2020/01/04(土) 21:15:32.64">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">안예로 요시모토에 들어가고 싶은 것인가?<br><span class="jp">顔芸で吉本入りしたいのか?</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">427. ID: <span>fzF4sWBT0.net</span> <span title="2020/01/04(土) 21:15:36.38">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">이건, 일본에 뭔가 불평을 하고 가고 싶다고 말하는 거지?<br><span class="jp">これって、日本に何か文句言いに行きたいって言ってるんだよな？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">428. ID: <span>SzS+rt7I0.net</span> <span title="2020/01/04(土) 21:15:37.14">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">대꾸를 받지 못하는 상대를 골라서 끝까지 강세를 보이다<br><span class="jp">言い返されない相手を選んでとことん強気になる</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">442. ID: <span>tSNQccTQ0.net</span> <span title="2020/01/04(土) 21:15:48.79">2020/01/04 21:15</span></div><div style="padding-top: 10px;"><p class="content">이번엔 일본이 돈줄이라고 밟았나 여자<br><span class="jp">今度は日本が金づるになると踏んだのか、女</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">456. ID: <span>Y434NQsg0.net</span> <span title="2020/01/04(土) 21:16:13.35">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">우쭐대는 극치를 다해 환영해 주마<br><span class="jp">よし贅の極みを尽くして歓迎してやろう</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">458. ID: <span>q0Hh6+AK0.net</span> <span title="2020/01/04(土) 21:16:16.18">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">이런 애기에도 꺄거리며 마중나올 머저리는 있을까<br><span class="jp">こんなガキでもキャーキャーいって出迎えるミーハーは居るんだろうか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">469. ID: <span>pcnvu3YB0.net</span> <span title="2020/01/04(土) 21:16:33.24">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">와라 기다리고 있을게
 그녀의 뒤에 있는 악인을 보고 싶다<br><span class="jp">来なよ待ってるぜ
 彼女の背後にいる悪人を見たい</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">471. ID: <span>hDpjofsb0.net</span> <span title="2020/01/04(土) 21:16:34.38">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">남의 나라에 일부러 욕하러 오지마.<br><span class="jp">他人様の国にわざわざ悪口言いに来るなよw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">486. ID: <span>/+tWMOn20.net</span> <span title="2020/01/04(土) 21:16:58.46">2020/01/04 21:16</span></div><div style="padding-top: 10px;"><p class="content">학교 가
 이야기는 그 다음이다<br><span class="jp">学校行けよ
