--- a/content/2020-01-09-fujitv-5g.md
+++ b/content/2020-01-09-fujitv-5g.md
@@ -25,10 +25,10 @@ backgroundPosition: 20%
 몇 십명이나 관련돼서 아무도 몰랐어?<br><span class="jp">いやテレビやろ？
 何十人も関わってて誰も知らなかったんかよ</span> </p></div><div class="content2"><div class="id">48. ID: <span>g1+Y34Eb0.net</span> <span title="2020/01/09(木) 23:48:13.48">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">내용 체크하는 인간은 한정되어 있잖아<br><span class="jp">内容チェックする人間は限られてるだろ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">40. ID: <span>a60bqluhp.net</span> <span title="2020/01/09(木) 23:47:50.40">2020/01/09 23:47</span></div><div style="padding-top: 10px;"><p class="content">결국 5G의 실태가 뭐야?원래 3G4G도 나타나지 않지만..<br><span class="jp">結局5Gの実態ってなんや？そもそも3G4Gもわかっとらんが</span> </p></div><div class="content2"><div class="id">60. ID: <span>g1+Y34Eb0.net</span> <span title="2020/01/09(木) 23:49:13.07">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">대규모 업데이트를 통해 통신 속도가 빨라졌다<br><span class="jp">大規模なアップデートして通信速度が速くなった</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">43. ID: <span>A23NSK3+d.net</span> <span title="2020/01/09(木) 23:47:59.70">2020/01/09 23:47</span></div><div style="padding-top: 10px;"><p class="content">큰일났다 이건.
 과연 레벨이 너무 낮거나 이전의 문제<br><span class="jp">やべーなこりゃw
-さすがにレベルが低すぎとか以前の問題</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">45. ID: <span>/q2S4QHZ0.net</span> <span title="2020/01/09(木) 23:48:02.77">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">천하의 지상파라니...거짓말이야<br><span class="jp">天下の地上波やぞ…嘘やろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">47. ID: <span>SjVr1OIw0.net</span> <span title="2020/01/09(木) 23:48:12.76">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">와이도 이미 도입되었고,<br><span class="jp">ワイもすでに導入しとるで</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">50. ID: <span>eETaBasud.net</span> <span title="2020/01/09(木) 23:48:23.78">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">애초에 전기 안쓰는 자급자족생활이 아니잖아요?<br><span class="jp">そもそも電気使ってない自給自足生活じゃなくね？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">53. ID: <span>UsOGSbjT0.net</span> <span title="2020/01/09(木) 23:48:41.25">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">모든 스태프 누구도 눈치채지 못할 수가 있어?
+さすがにレベルが低すぎとか以前の問題</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">45. ID: <span>/q2S4QHZ0.net</span> <span title="2020/01/09(木) 23:48:02.77">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">천하의 지상파라니...거짓말이야<br><span class="jp">天下の地上波やぞ…嘘やろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">47. ID: <span>SjVr1OIw0.net</span> <span title="2020/01/09(木) 23:48:12.76">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">나도 이미 도입하고있어<br><span class="jp">ワイもすでに導入しとるで</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">50. ID: <span>eETaBasud.net</span> <span title="2020/01/09(木) 23:48:23.78">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">애초에 전기 안쓰는 자급자족생활이 아니잖아요?<br><span class="jp">そもそも電気使ってない自給自足生活じゃなくね？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">53. ID: <span>UsOGSbjT0.net</span> <span title="2020/01/09(木) 23:48:41.25">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">모든 스태프 누구도 눈치채지 못할 수가 있어?
 연기자 쪽에도 파고들 놈 하나도 없느냐?<br><span class="jp">全スタッフ誰一人気付かないなんてことあり得るのかよ
-演者側にもツッコめる奴一人もおらんのか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">54. ID: <span>fHVRc5Cr0.net</span> <span title="2020/01/09(木) 23:48:41.54">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">소라곤의 회견도 내쫓길 거에요<br><span class="jp">そらゴーンの会見も締め出されますわ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">55. ID: <span>GX79rNjHd.net</span> <span title="2020/01/09(木) 23:48:43.73">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">후지라는거 정말로 바보밖에 없는거네?<br><span class="jp">フジってほんまアホしかおらんのやな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">57. ID: <span>sovGcycT0.net</span> <span title="2020/01/09(木) 23:48:47.38">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">기가의 사용법을 잘못한 채 돌진한 폐단이잖아<br><span class="jp">ギガの使い方を間違ったまま突き進んだ弊害だろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>Pmno/AsS0.net</span> <span title="2020/01/09(木) 23:49:06.02">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">얼른 WiFi5라는 넘버링을 해야 할,
-혼란이 일어나다<br><span class="jp">さっさとWiFi5っていうナンバリングを流行らすべきや
-混乱がおこる</span> </p></div><div class="content2"><div class="id">139. ID: <span>8fp6/QaJ0.net</span> <span title="2020/01/09(木) 23:53:14.22">2020/01/09 23:53</span></div><div style="padding-top: 10px;"><p class="content">이제 와서나 이제 wifi6과 5G가 디포가 될 때까지 기다리는 수밖에 없어, 없다<br><span class="jp">今更やしもうwifi6と5Gがデフォになるまで待つしかないんやない</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">61. ID: <span>AaOUA4bH0.net</span> <span title="2020/01/09(木) 23:49:18.12">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">미안, 뭐가 이상한지 와이에게 가르쳐 줘<br><span class="jp">すまん、何がおかしいのかワイに教えてくれ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">62. ID: <span>oRJQKaQC0.net</span> <span title="2020/01/09(木) 23:49:20.99">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">역시 웃었다<br><span class="jp">流石に笑った</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">63. ID: <span>N/OhOCDAa.net</span> <span title="2020/01/09(木) 23:49:21.27">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">당질 레벨 야로<br><span class="jp">糖質レベルやろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">64. ID: <span>oD3Dsbp90.net</span> <span title="2020/01/09(木) 23:49:31.06">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">유키치케이부카나<br><span class="jp">諭吉ケーブルかな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">65. ID: <span>40TJEtYx0.net</span> <span title="2020/01/09(木) 23:49:35.87">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">스만후지TV가 제작했었어<br><span class="jp">すまんフジテレビが製作してたわ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">66. ID: <span>FE7FGK4q0.net</span> <span title="2020/01/09(木) 23:49:39.93">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">방송국이잖아
-기술계의 스탭 오루야로<br><span class="jp">放送局だろ
-技術系のスタッフおるやろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">67. ID: <span>TMYzaGQer.net</span> <span title="2020/01/09(木) 23:49:45.62">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">뭐 확실히 알기 어렵네<br><span class="jp">まあ確かに分かりにくいな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">69. ID: <span>4p4am1P90.net</span> <span title="2020/01/09(木) 23:49:52.97">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">와이는 HTML5이 잘 나타나지 않<br><span class="jp">ワイはHTML5がよくわかっとらんな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">71. ID: <span>aOfHM1Yj0.net</span> <span title="2020/01/09(木) 23:49:54.34">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">이는 5G이나 4G를 유행시킨 경력이 안 좋아요.<br><span class="jp">これは5Gとか4Gを流行らせたキャリアが悪いわ</span> </p></div></div></div></div>
+演者側にもツッコめる奴一人もおらんのか</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">54. ID: <span>fHVRc5Cr0.net</span> <span title="2020/01/09(木) 23:48:41.54">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">소라곤의 회견도 내쫓길 거에요<br><span class="jp">そらゴーンの会見も締め出されますわ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">55. ID: <span>GX79rNjHd.net</span> <span title="2020/01/09(木) 23:48:43.73">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">후지라는거 정말로 바보밖에 없는거네?<br><span class="jp">フジってほんまアホしかおらんのやな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">57. ID: <span>sovGcycT0.net</span> <span title="2020/01/09(木) 23:48:47.38">2020/01/09 23:48</span></div><div style="padding-top: 10px;"><p class="content">기가의 사용법을 잘못한 채 돌진한 폐단이잖아<br><span class="jp">ギガの使い方を間違ったまま突き進んだ弊害だろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">59. ID: <span>Pmno/AsS0.net</span> <span title="2020/01/09(木) 23:49:06.02">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">얼른 WiFi5라는 넘버링을 유행시켜야해,
+혼란이 일어나<br><span class="jp">さっさとWiFi5っていうナンバリングを流行らすべきや
+混乱がおこる</span> </p></div><div class="content2"><div class="id">139. ID: <span>8fp6/QaJ0.net</span> <span title="2020/01/09(木) 23:53:14.22">2020/01/09 23:53</span></div><div style="padding-top: 10px;"><p class="content">이미 늦었고 이제 wifi6과 5G가 디폴트가 될 때까지 기다리는 수밖에 없지않나<br><span class="jp">今更やしもうwifi6と5Gがデフォになるまで待つしかないんやない</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">61. ID: <span>AaOUA4bH0.net</span> <span title="2020/01/09(木) 23:49:18.12">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">미안, 뭐가 이상한지 와이에게 가르쳐 줘<br><span class="jp">すまん、何がおかしいのかワイに教えてくれ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">62. ID: <span>oRJQKaQC0.net</span> <span title="2020/01/09(木) 23:49:20.99">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">역시 웃었다<br><span class="jp">流石に笑った</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">66. ID: <span>FE7FGK4q0.net</span> <span title="2020/01/09(木) 23:49:39.93">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">방송국이잖아
+기술계의 스태프 있잖아<br><span class="jp">放送局だろ
+技術系のスタッフおるやろ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">67. ID: <span>TMYzaGQer.net</span> <span title="2020/01/09(木) 23:49:45.62">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">뭐 확실히 알기 어렵네<br><span class="jp">まあ確かに分かりにくいな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">69. ID: <span>4p4am1P90.net</span> <span title="2020/01/09(木) 23:49:52.97">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">나는 HTML5가 잘 이해가 안돼<br><span class="jp">ワイはHTML5がよくわかっとらんな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">71. ID: <span>aOfHM1Yj0.net</span> <span title="2020/01/09(木) 23:49:54.34">2020/01/09 23:49</span></div><div style="padding-top: 10px;"><p class="content">이건 5G나 4G를 유행시킨 통신사가 나쁘다<br><span class="jp">これは5Gとか4Gを流行らせたキャリアが悪いわ</span> </p></div></div></div></div>
