--- a/content/2020-01-30-apple.md
+++ b/content/2020-01-30-apple.md
@@ -31,7 +31,7 @@ Macだけで勝負してたら完全に終わってた</span> </p></div></div></
 どんだけブランド価値で儲けてんだよｗ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">24. ID: <span>lgs6K2YL.net</span> <span title="2020/01/29(水) 08:37:48">2020/01/29 08:37</span></div><div style="padding-top: 10px;"><p class="content">애플 쇼크가 없어서 다행이야.<br><span class="jp">アップルショック無くてよかった</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">26. ID: <span>MP9A8Btc.net</span> <span title="2020/01/29(水) 08:39:45">2020/01/29 08:39</span></div><div style="padding-top: 10px;"><p class="content">3개월 만에 매출 10조엔이라니<br><span class="jp">3ヶ月で売上10兆円て</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">27. ID: <span>tRgosvzh.net</span> <span title="2020/01/29(水) 08:40:59">2020/01/29 08:40</span></div><div style="padding-top: 10px;"><p class="content">아직도 6s사용하는 것이지만
 바꿀까 생각할 때마다 가격 알아보고 빼기<br><span class="jp">未だに6s使ってるけど
 買い換えようかなって考える度、値段調べて引く</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">52. ID: <span>UgIa8RHr.net</span> <span title="2020/01/29(水) 09:35:16.26">2020/01/29 09:35</span></div><div style="padding-top: 10px;"><p class="content">슬슬 끝의 시작이야<br><span class="jp">そろそろ終わりの始まりだよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">53. ID: <span>wgTEjyDZ.net</span> <span title="2020/01/29(水) 09:45:48.21">2020/01/29 09:45</span></div><div style="padding-top: 10px;"><p class="content">마지막 시작으로부터 8년 지났습니다.
-현재의 상황이 이것입니다.ᄏ<br><span class="jp">終わりの始まりから八年経ちました。
+현재의 상황이 이것입니다ㅋ<br><span class="jp">終わりの始まりから八年経ちました。
 現在の状況がこれですw</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">54. ID: <span>+ztw6E6H.net</span> <span title="2020/01/29(水) 09:48:38.83">2020/01/29 09:48</span></div><div style="padding-top: 10px;"><p class="content">웬만큼 유명한 시설기기 메이커도, 사원에게 iPhone와 iPad 갖게 하고 있지요.
 기종이 낡아도, 최신의 OS로 업데이트가 되어, 라고 할까 마음대로 해 주고 수고가 들기 때문일까.<br><span class="jp">そこそこ有名な施設機器メーカーも、社員にiPhoneとiPad持たせてるもんなあ。
 機種が古くなっても、最新のOSにアップデートができて、というか勝手にやってくれるし手間がかからんからだろうか。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">57. ID: <span>A2e/NGH5.net</span> <span title="2020/01/29(水) 09:59:02.30">2020/01/29 09:59</span></div><div style="padding-top: 10px;"><p class="content">좀 제대로 된 기종을 내놓으면 금방 매출이 늘겠구나.
@@ -62,7 +62,7 @@ XRとかいう廉価版なんて出したから、
 왜 계속 iphone에 매달렸는지 모르겠어<br><span class="jp">おらはpixelに変えたが不自由はない。
 なんでiphoneに拘り続けたのか分からんわ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">122. ID: <span>9lNQRaAX.net</span> <span title="2020/01/29(水) 21:30:12.36">2020/01/29 21:30</span></div><div style="padding-top: 10px;"><p class="content">apple주주이지만 매일포함이익이 늘어간다.
 잡스도 기뻐하고 있을거라 생각해. 잘 하고 있대.<br><span class="jp">apple株主だが毎日含み益が増えていく
-ジョブスも喜んでいると思うよ　よくやってるってさ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">125. ID: <span>ajdKFP6N.net</span> <span title="2020/01/30(木) 01:19:55.87">2020/01/30 01:19</span></div><div style="padding-top: 10px;"><p class="content">벌써 몇년전부터 애플 끝났다고 5짱으로 알려져 있는데 언제쯤 끝나?ᄏ
+ジョブスも喜んでいると思うよ　よくやってるってさ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">125. ID: <span>ajdKFP6N.net</span> <span title="2020/01/30(木) 01:19:55.87">2020/01/30 01:19</span></div><div style="padding-top: 10px;"><p class="content">벌써 몇년전부터 애플 끝났다고 5짱으로 알려져 있는데 언제쯤 끝나?ㅋ
 여기까지 매회 역신의 5창은 어떻게 보면 굉장해.<br><span class="jp">もう何年も前からアップル終わったって５ちゃんで言われてるけどいつになったら終わるんだ？ｗ
 ここまで毎回毎回逆神の５ちゃんはある意味すげーわ</span> </p></div><div class="content2"><div class="id">127. ID: <span>rz6dnkbV.net</span> <span title="2020/01/30(木) 01:35:06.78">2020/01/30 01:35</span></div><div style="padding-top: 10px;"><p class="content">5장이라니 갈라폰으로도 충분하다느니 XP로 충분하다느니 하는 노해투성이야 ᄏᄏ<br><span class="jp">５ちゃんなんてガラケーで充分とかXPで充分とか言ってる老害だらけだぞｗ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">129. ID: <span>6FqxEA/F.net</span> <span title="2020/01/30(木) 03:30:38.65">2020/01/30 03:30</span></div><div style="padding-top: 10px;"><p class="content">Android와 iPhone을 왔다갔다 하고 있어
 지금은 iPhoneXS
